--- a/Maven Project/SimpleServletApp/src/main/webapp/index.html
+++ b/Maven Project/SimpleServletApp/src/main/webapp/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <h2>Welcome to my simple web page</h2>
-<a href="Hi">Click Here</a>
+<a href="Hi">Click Here</a><br/>
+<a href="login.html">Login Page</a>
 </body>
 </html>
